# my-website-check

./: .env.example  .gitignore  README.md  deploy.sh  lambda_function.py  pyproject.toml  test_lambda.py
beautifulsoup4-4.14.2.dist-info/: RECORD
certifi-2025.10.5.dist-info/: RECORD
charset_normalizer-3.4.3.dist-info/: RECORD
docs/plans/: 2025-10-24-multi-page-checking-design.md
idna-3.10.dist-info/: RECORD
requests-2.32.5.dist-info/: RECORD
soupsieve-2.8.dist-info/: RECORD
src/website_check/: __init__.py  lambda_function.py
typing_extensions-4.15.0.dist-info/: RECORD
urllib3-2.5.0.dist-info/: RECORD
